--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -90,7 +90,8 @@
 % General useful packages
 % ******************************************************************** 
 \PassOptionsToPackage{T1}{fontenc} % T2A for cyrillics
-	\usepackage{fontenc}     
+	\usepackage{fontenc}    
+	 
 \usepackage{textcomp} % fix warning with missing font shapes
 \usepackage{scrhack} % fix warnings when using KOMA with listings package          
 \usepackage{xspace} % to get the spacing after macros right  
@@ -102,6 +103,7 @@
 	\usepackage{acronym} % nice macros for handling all acronyms in the thesis
 %\renewcommand*{\acsfont}[1]{\textssc{#1}} % for MinionPro
 \renewcommand{\bflabel}[1]{{#1}\hfill} % fix the list of acronyms
+
 % ****************************************************************************************************
 
 
@@ -115,6 +117,9 @@
 \usepackage{caption}
 \captionsetup{format=hang,font=small}
 \usepackage{subfig}  
+
+
+\usepackage{enumerate}
 % ****************************************************************************************************
 
 
