--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -40,7 +40,7 @@
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
 \newcommand{\myTitle}{Investigating Interactional Issues of Agent Planning Support\xspace}
-\newcommand{\mySubtitle}{Disaster Response as an example \xspace}
+\newcommand{\mySubtitle}{In Disaster Response domain \xspace}
 \newcommand{\myDegree}{Doctoral\xspace}
 \newcommand{\myName}{Wenchao Jiang\xspace}
 \newcommand{\myProf}{Put name here\xspace}
@@ -269,7 +269,7 @@
 % ********************************************************************
 % Changing the text area
 % ********************************************************************
-%\linespread{1.05} % a bit more for Palatino
+\linespread{1.5} % a bit more for Palatino
 %\areaset[current]{312pt}{761pt} % 686 (factor 2.2) + 33 head + 42 head \the\footskip
 %\setlength{\marginparwidth}{7em}%
 %\setlength{\marginparsep}{2em}%
