--- a/FrontBackmatter/Abstract.tex
+++ b/FrontBackmatter/Abstract.tex
@@ -13,7 +13,7 @@
 
 (Problem) Recently, Frequent natural and man-made disasters in Haiti, Chile and Japan drew attention of Researchers. A lot efforts have been made to study the technologies that can assist human responders to improve their performance. In the disaster response domain,  a disaster response team, which contains several incident commanders and field agents, is faced with the problem of carrying out geographically distributed tasks under spatial and time constraints in a quickly changing task environment. \\ 
 
-\noindent Effective planning and coordination can be a key factor for the success of disaster operation but it is difficult to achieve. Recent advance in the multi-agent technologies leads to the possibility of building agent software which supports Team coordination by automating the task planning process. However , it is unknown how the agent software can fit into the team organisation in a way that improve rather than hinders the team performance. \\
+\noindent Effective planning and coordination can be a key factor for the success of disaster operation but it is difficult to achieve. Recent advance in the multi-agent technologies leads to the possibility of building agent software which supports Team coordination by automating the task planning process. However , it is unknown how the agent software can fit into the team organisation in a way that improve rather than hinders the team performance. The interaction between human operators and planning support systems need to be carefully designed before technology deployment.\\
 
 \noindent (method) This work presents three field studies which investigates the impact of different interactional arrangements between human teams and automated planning support. The studies adopt serious game approach which is arguably an established vehicle to vehicle to explore socio-technical issues in complex real world settings.\\
 
