some house keeping

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -129,27 +129,7 @@ file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Stewa
 title = {{Extreme event decision Making workshop report}},
 year = {2002}
 }
-@article{Chen2005,
-abstract = {Emergency response systems play an important role in homeland security nowadays. Despite this, research in the design of emergency response systems is lacking. An effective design of emergency response system involves multi-disciplinary design considerations. On the basis of emergency response system requirement analysis, in this paper, we develop a set of supporting design concepts and strategic principles for an architecture for a coordinated multi-incident emergency response system},
-annote = {Multi incident scenario suitable for AtomicOrchid. 
-        
-reference to CT's role in DR
-      },
-author = {Chen, Rui and Sharman, Raj and Rao, H Raghav and Upadhyaya, Shambhu J},
-chapter = {8},
-doi = {10.1007/11427995\_8},
-editor = {Kantor, Paul and Muresan, Gheorghe and Roberts, Fred and Zeng, Daniel D and Wang, Fei-Yue and Chen, Hsinchun and Merkle, Ralph C},
-file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Chen et al. - 2005 - Design Principles of Coordinated Multi-incident Emergency Response Systems.pdf:pdf},
-isbn = {9783540259992},
-journal = {Simulation},
-pages = {177--202},
-publisher = {Springer Berlin / Heidelberg},
-series = {Lecture Notes in Computer Science},
-title = {{Design Principles of Coordinated Multi-incident Emergency Response Systems}},
-url = {http://dx.doi.org/10.1007/11427995\_8},
-volume = {3495},
-year = {2005}
-}
+
 @article{Kanchanasut2007,
 annote = {Is a network layer study, Ad-hoc architecture allow mutimedia internet connection when  infrustracture is unavailable. },
 author = {Kanchanasut, Kanchana and Tunpan, Apinun and Awal, Mohammad Abdul and Das, Dwijendra Kumar and Wongsaardsakul, Thirapon and Tsuchimoto, Yasuo},
@@ -327,3 +307,297 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S095741741000429X},
 volume = {38},
 year = {2011}
 }
+
+@article{Drury2009,
+abstract = {Crowd behaviour in emergencies has previously been explained in terms of either 'mass panic' or strength of pre-existing social bonds. The present paper reports results from a study comparing high- versus low-identification emergency mass emergency survivors to test the interlinked claims (1) that shared identity in an emergency crowd enhances expressions of solidarity and reduces 'panic' behaviour and (2) that such a shared identity can arise from the shared experience of the emergency itself. Qualitative and descriptive quantitative analyses were carried out on interviews with 21 survivors of 11 emergencies. The analysis broadly supports these two claims. The study therefore points to the usefulness of a new approach to mass emergency behaviour, based on self-categorization theory (SCT).},
+author = {Drury, John and Cocking, Chris and Reicher, Steve},
+doi = {10.1348/014466608X357893},
+issn = {0144-6665},
+journal = {The British journal of social psychology / the British Psychological Society},
+keywords = {Emergencies,Female,Helping Behavior,Humans,Male,Mass Behavior,Object Attachment,Panic,Reinforcement,Social,Social Identification,Social Support,Survivors,Survivors: psychology},
+month = sep,
+number = {Pt 3},
+pages = {487--506},
+pmid = {18789185},
+title = {{Everyone for themselves? A comparative study of crowd solidarity among emergency survivors.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/18789185},
+volume = {48},
+year = {2009}
+}
+@article{Armenakis2012,
+author = {Armenakis, Costas},
+doi = {10.1007/s11069-012-0197-2},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Armenakis - 2012 - Systems approach to management of disasters methods and applications.pdf:pdf},
+issn = {0921-030X},
+journal = {Natural Hazards},
+month = apr,
+number = {1},
+pages = {139--140},
+title = {{Systems approach to management of disasters: methods and applications}},
+url = {http://link.springer.com/10.1007/s11069-012-0197-2},
+volume = {66},
+year = {2012}
+}
+@inproceedings{Robinson,
+author = {Robinson, C.D. and Brown, D.E.},
+booktitle = {Proceedings of the Winter Simulation Conference, 2005.},
+doi = {10.1109/WSC.2005.1574340},
+isbn = {0-7803-9519-0},
+pages = {919--925},
+publisher = {IEEE},
+title = {{First Responder Information Flow Simulation: A Tool for Technology Assessment}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1574340}
+}
+@article{Hawe2012,
+author = {Hawe, Glenn I. and Coates, Graham and Wilson, Duncan T. and Crouch, Roger S.},
+doi = {10.1145/2379776.2379784},
+issn = {03600300},
+journal = {ACM Computing Surveys},
+month = nov,
+number = {1},
+pages = {1--51},
+title = {{Agent-based simulation for large-scale emergency response}},
+url = {http://dl.acm.org/citation.cfm?doid=2379776.2379784},
+volume = {45},
+year = {2012}
+}
+@article{Convertino2011,
+author = {Convertino, Gregorio and Mentis, Helena M. and Slavkovic, Aleksandra and Rosson, Mary Beth and Carroll, John M.},
+doi = {10.1145/2063231.2063236},
+issn = {10730516},
+journal = {ACM Transactions on Computer-Human Interaction},
+month = dec,
+number = {4},
+pages = {1--34},
+title = {{Supporting common ground and awareness in emergency management planning}},
+url = {http://dl.acm.org/citation.cfm?doid=2063231.2063236},
+volume = {18},
+year = {2011}
+}
+@inproceedings{Malone1990,
+address = {New York, New York, USA},
+author = {Malone, Thomas W. and Crowston, Kevin},
+booktitle = {Proceedings of the 1990 ACM conference on Computer-supported cooperative work - CSCW '90},
+doi = {10.1145/99332.99367},
+isbn = {0897914023},
+pages = {357--370},
+publisher = {ACM Press},
+title = {{What is coordination theory and how can it help design cooperative work systems?}},
+url = {http://portal.acm.org/citation.cfm?doid=99332.99367},
+year = {1990}
+}
+@article{Lee2009,
+author = {Lee, Young M. and Ghosh, Soumyadip and Ettl, Markus},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Lee, Ghosh, Ettl - 2009 - Simulating distribution of emergency relief supplies for disaster response operations.pdf:pdf},
+month = dec,
+pages = {2797--2808},
+title = {{Simulating distribution of emergency relief supplies for disaster response operations}},
+url = {http://dl.acm.org/citation.cfm?id=1995456.1995837},
+year = {2009}
+}
+@article{Fischer,
+author = {Fischer, Joel E and Jiang, Wenchao and Kerne, Andruid and Greenhalgh, Chris and Ramchurn, Sarvapali D and Reece, Steven and Pantidi, Nadia and Rodden, Tom},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Fischer et al. - Unknown - Supporting Team Coordination on the Ground Requirements from a Mixed Reality Game.pdf:pdf},
+title = {{Supporting Team Coordination on the Ground : Requirements from a Mixed Reality Game}}
+}
+@article{Toups2011,
+author = {Toups, Zachary O. and Kerne, Andruid and Hamilton, William A.},
+doi = {10.1145/2063231.2063237},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Toups, Kerne, Hamilton - 2011 - The team coordination game.pdf:pdf},
+issn = {10730516},
+journal = {ACM Transactions on Computer-Human Interaction},
+keywords = {Zero-fidelity simulation,education games,game interface design,information distribution},
+month = dec,
+number = {4},
+pages = {1--37},
+title = {{The team coordination game}},
+url = {http://dl.acm.org/citation.cfm?id=2063231.2063237},
+volume = {18},
+year = {2011}
+}
+@article{Crabtree2006,
+address = {New York, New York, USA},
+author = {Crabtree, Andy and Benford, Steve and Greenhalgh, Chris and Tennent, Paul and Chalmers, Matthew and Brown, Barry},
+doi = {10.1145/1142405.1142417},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Crabtree et al. - 2006 - Supporting ethnographic studies of ubiquitous computing in the wild.pdf:pdf},
+isbn = {1595933670},
+journal = {Proceedings of the 6th ACM conference on Designing Interactive systems - DIS '06},
+pages = {60},
+publisher = {ACM Press},
+title = {{Supporting ethnographic studies of ubiquitous computing in the wild}},
+url = {http://portal.acm.org/citation.cfm?doid=1142405.1142417},
+year = {2006}
+}
+@article{Benford2005,
+author = {Benford, Steve and Magerkurth, Carsten and Ljungstrand, Peter},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Benford, Magerkurth, Ljungstrand - 2005 - Bridging the PHYSICAL AND DIGITAL in Pervasive Gaming.pdf:pdf},
+journal = {Communications of the ACM},
+number = {3},
+title = {{Bridging the PHYSICAL AND DIGITAL in Pervasive Gaming}},
+volume = {48},
+year = {2005}
+}
+@article{Chen2005,
+abstract = {Emergency response systems play an important role in homeland security nowadays. Despite this, research in the design of emergency response systems is lacking. An effective design of emergency response system involves multi-disciplinary design considerations. On the basis of emergency response system requirement analysis, in this paper, we develop a set of supporting design concepts and strategic principles for an architecture for a coordinated multi-incident emergency response system},
+annote = {Multi incident scenario suitable for AtomicOrchid. 
+
+        
+reference to CT's role in DR
+
+      },
+author = {Chen, Rui and Sharman, Raj and Rao, H Raghav and Upadhyaya, Shambhu J},
+chapter = {8},
+doi = {10.1007/11427995\_8},
+editor = {Kantor, Paul and Muresan, Gheorghe and Roberts, Fred and Zeng, Daniel D and Wang, Fei-Yue and Chen, Hsinchun and Merkle, Ralph C},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Chen et al. - 2005 - Design Principles of Coordinated Multi-incident Emergency Response Systems.pdf:pdf},
+isbn = {9783540259992},
+journal = {Simulation},
+pages = {177--202},
+publisher = {Springer Berlin / Heidelberg},
+series = {Lecture Notes in Computer Science},
+title = {{Design Principles of Coordinated Multi-incident Emergency Response Systems}},
+url = {http://dx.doi.org/10.1007/11427995\_8},
+volume = {3495},
+year = {2005}
+}
+@article{Fischer2012,
+author = {Fischer, Joel E and Rodden, Tom and Flintham, Martin and Price, Dominic and Goulding, James and Pantidi, Nadia},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Fischer et al. - 2012 - Serious Mixed Reality Games.pdf:pdf},
+isbn = {9781450310512},
+journal = {CSCW2012: Mixed Reality Games Workshop},
+title = {{Serious Mixed Reality Games}},
+year = {2012}
+}
+
+@inproceedings{Toups2009,
+address = {New York, New York, USA},
+author = {Toups, Zachary O. and Kerne, Andruid and Hamilton, William},
+booktitle = {Proceedings of the 2009 ACM SIGGRAPH Symposium on Video Games - Sandbox '09},
+doi = {10.1145/1581073.1581085},
+isbn = {9781605585147},
+pages = {71},
+publisher = {ACM Press},
+title = {{Game design principles for engaging cooperative play}},
+url = {http://portal.acm.org/citation.cfm?doid=1581073.1581085},
+year = {2009}
+}
+@misc{Searle1976,
+abstract = {There are at least a dozen linguistically significant dimensions of differences between illocutionary acts. Of these, the most important are illocutionary point, direction of fit, and expressed psychological state. These three form the basis of a taxonomy of the fundamental classes of illocutionary acts. The five basic kinds of illocutionary acts are: representatives (or assertives), directives, commissives, expressives, and declarations. Each of these notions is defined. An earlier attempt at constructing a taxonomy by Austin is defective for several reasons, especially in its lack of clear criteria for distinguishing one kind of illocutionary force from another. Paradigm performative verbs in each of the five categories exhibit different syntactical properties. These are explained. (Speech acts, Austin's taxonomy, functions of speech, implications for ethnography and ethnology; English.)},
+author = {Searle, John R.},
+booktitle = {Language in Society},
+number = {01},
+pages = {1},
+title = {{A classification of illocutionary acts}},
+volume = {5},
+year = {1976}
+}
+@inproceedings{Sarcevic2012,
+abstract = {We examine the public, social media communications of 110 emergency medical response teams and organizations in the immediate aftermath of the January 12, 2010 Haiti earthquake. We found the teams through an inductive analysis of Twitter communications acquired over the three-week emergency period from 89,114 Twitterers. We then analyzed the teams’ Twitter streams, as well as all digital media they generated and pointed to in their streams—blog posts, photographs, videos, status updates and field reports—to understand the medical coordination challenges they faced from pre-deployment readiness to on- the-ground action. Here we identify opportunities for improving coordination in a decentralized and distributed environment where staffing, disease trajectories, and other circumstances rapidly change. We extrapolate from these findings to theorize about how “beaconing” behavior is a sign of latent potential for coordination upon which mechanisms of coordination can capitalize.},
+author = {Sarcevic, Aleksandra and Palen, Leysia and White, Joanne and Starbird, Kate and Bagdouri, Mossaab and Anderson, Kenneth},
+booktitle = {Proceedings of the ACM 2012 conference on Computer Supported Cooperative Work},
+pages = {47--56},
+title = {{``Beacons of Hope'' in Decentralized Coordination: Learning from On-the-Ground Medical Twitterers During the 2010 Haiti Earthquake}},
+year = {2012}
+}
+
+@misc{Mendonca2007,
+abstract = {Using the emergent interoperability approach to address unanticipated contingencies during emergency response.},
+author = {Mendon\c{c}a, David and Jefferson, Theresa and Harrald, John},
+booktitle = {Communications of the ACM},
+issn = {00010782},
+number = {3},
+pages = {44},
+pmid = {24209668},
+title = {{Collaborative adhocracies and mix-and-match technologies in emergency management}},
+volume = {50},
+year = {2007}
+}
+@article{Losh2007,
+abstract = {The Interactive Media Laboratory at Dartmouth Medical School produces computer games and multimedia programs for public health preparedness. With funding from the U.S. Department of Homeland Security, the IML is now developing the Virtual Terrorism Response Academy, which uses game technology to prepare first responders for rescue efforts in which hazardous materials may be involved. This paper looks at the taxonomy of related game genres, the history of the "Virtual Clinic" concept that shapes the user's spatial experience, and the original rationale for creating what Max Boisot calls "epistemology space." From the perspective of an outside researcher, it also offers an account of the VRTA desginers' responses to potential criticism from learning specialists in game studies who object that the game is too didactic and discourages trial-and-error by restraining the learner in the narrative conceit of a "simulation of a simulation." The author argues that despite an understandable emphasis on the rhetorical situation of professional communication and the chain of command, the tendencies of the game's mechanics to emphasize multiple-choice testing rather than exploit potential spatial enhancements could detract from the effectiveness of the game.},
+author = {Losh, Elizabeth},
+journal = {2007 ACM SIGGRAPH symposium on Video games},
+keywords = {2007 by the association,computer game,computer simulation,copyright,crisis management,epistemological space,for computing machinery,inc,public rhetoric},
+number = {212},
+pages = {73--81},
+title = {{The birth of the virtual clinic: the Virtual Terrorism Response Academy as serious game and epistemological space}},
+url = {http://dl.acm.org/citation.cfm?id=1274956},
+volume = {1},
+year = {2007}
+}
+@misc{Jordan1995,
+abstract = {Interaction Analysis as we describe it here is an interdisciplinary method for the empirical investigation of the interaction of human beings with each other and with objects in their environment. It investigates human activities, such as talk, nonverbal interaction, and the use of artifacts and technologies, identifying routine practices and problems and the resources for their solu- tion. Its roots lie in ethnography (especially participant observation), socio- linguistics, ethnomethodology, conversation analysis, kinesics, proxemics, and ethology. Video technology has been vital in establishing Interaction Analysis, which depends on the technology of audiovisual recording for its primary records and on playback capability for their analysis.* Only electronic recording produces the kind of data corpus that allows the close interrogation required for Interaction Analysis. In particular, it provides the crucial ability to replay a sequence of interaction repeatedly for multiple viewers-and on multiple occasions.},
+author = {Jordan, Brigitte and Henderson, Austin},
+booktitle = {Journal of the Learning Sciences},
+issn = {1050-8406},
+number = {1},
+pages = {39--103},
+title = {{Interaction Analysis: Foundations and Practice}},
+volume = {4},
+year = {1995}
+}
+@book{Heath2010,
+abstract = {Video provides unprecedented opportunities for social science research, enabling fine-grained analysis of social organisation, culture and communication. Video in Qualitative Research provides practical guidance for students and academics on how to use video in qualitative research, how to address the problems and issues that arise in undertaking video-based field studies and how to subject video recordings to detailed scrutiny and analysis. Heath, Hindmarsh and Luff consider the ethical and practical issues that arise in recording and gathering data as well as how video enables new and distinctive ways of presenting insights, observations and findings to both academic and practitioner audiences. The book is illustrated throughout with a wide range of case material drawn from the authors own research projects, and these cases serve to situate the practical and methodological guidance offered by the book into real research scenarios. Video in Qualitative Research is an invaluable guide for students and researchers across the social sciences thinking of using video as part of their research. Christian Heath is Professor of Work and Organisation, Kings College London Jon Hindmarsh is Reader in Work Practice and Technology, Kings College London Paul Luff is Professor in Organisations and Technology, Kings College London},
+author = {Heath, Christian and Hindmarsh, Jon and Luff, Paul},
+booktitle = {Using video Psychological and social applications},
+file = {:Users/wxj/Library/Application Support/Mendeley Desktop/Downloaded/Heath, Hindmarsh, Luff - 2010 - Video in Qualitative Research.pdf:pdf},
+isbn = {1412929431},
+pages = {184},
+publisher = {Sage Publications Ltd},
+title = {{Video in Qualitative Research}},
+url = {http://www.amazon.co.uk/dp/1412929431},
+year = {2010}
+}
+@inproceedings{Flintham2003,
+abstract = {We describe two games in which online participants collaborated with mobile participants on the city streets. In the first, the players were online and professional performers were on the streets. The second reversed this relationship. Analysis of these experiences yields new insights into the nature of context. We show how context is more socially than technically constructed. We show how players exploited (and resolved conflicts between) multiple indications of context including GPS, GPS error, audio talk, ambient audio, timing, local knowledge and trust. We recommend not overly relying on GPS, extensively using audio, and extending interfaces to represent GPS error.},
+author = {Flintham, Martin and Benford, Steve and Anastasi, Rob and Hemmings, Terry and Crabtree, Andy and Greenhalgh, Chris and Tandavanitj, Nick and Adams, Matt and Row-Farr, Ju},
+booktitle = {Proceedings of the conference on Human factors in computing systems - CHI '03},
+pages = {569--576},
+publisher = {ACM Press},
+title = {{Where On-Line Meets On-The-Streets: Experiences With Mobile Mixed Reality Games}},
+url = {http://portal.acm.org/citation.cfm?doid=642611.642710},
+year = {2003}
+}
+@inproceedings{Crabtree2004,
+address = {New York, New York, USA},
+author = {Crabtree, Andy and Tandavanitj, Nick and Steed, Anthony and Benford, Steve and Rodden, Tom and Greenhalgh, Chris and Flintham, Martin and Anastasi, Rob and Drozd, Adam and Adams, Matt and Row-Farr, Ju},
+booktitle = {Proceedings of the 2004 conference on Human factors in computing systems - CHI '04},
+doi = {10.1145/985692.985742},
+isbn = {1581137028},
+pages = {391--398},
+publisher = {ACM Press},
+title = {{Orchestrating a mixed reality game 'on the ground'}},
+url = {http://portal.acm.org/citation.cfm?doid=985692.985742},
+year = {2004}
+}
+@inproceedings{Borge2012,
+abstract = {In this paper we present findings from a laboratory study of teams of three, collaborating to complete a complex information sharing, synthesis, decision-making task. We use interaction analysis, communication analysis, and task analysis methods to identify the primary activities teams engaged in as they solved a complex information dependant decision-making task. These activities serve as the foundation to present findings related to common team problems and patterns of interaction associated with team performance. We found differences between high and low performing teams related to verbal equity and how they shared and synthesized information.},
+author = {Borge, Marcela and Ganoe, Craig H. and Shih, Shin-I and Carroll, John M.},
+booktitle = {Proceedings of the ACM 2012 conference on Computer Supported Cooperative Work - CSCW '12},
+keywords = {cognitive specialization,communication analysis,information analysis,information artifacts,information synthesis,shared authority,team performance,verbal equity},
+pages = {1105--114},
+publisher = {ACM Press},
+title = {{Patterns of team processes and breakdowns in information analysis tasks}},
+url = {http://dl.acm.org/citation.cfm?id=2145204.2145369},
+year = {2012}
+}
+@article{Abbasi2012,
+abstract = {In disasters such as the earthquake in Haiti and the tsunami in Japan, people used social media to ask for help or report injuries. The popularity, efficiency, and ease of use of social media has led to its pervasive use during the disaster. This creates a pool of timely reports about the disaster, injuries, and help requests. This offers an alternative opportunity for first responders and disaster relief organizations to collect information about the disaster, victimis, and their needs. It also presents a challenge for these organizations to aggregate and process the requests from different social media. Given the sheer volume of requests, it is necessary to filter reports and select those of high priority for decision making. Little is known about how the two phases should be smoothly integrated. In this paper we report the use of social media during a simulated crisis and crisis response process, the ASU Crisis Response Game. Its main objective is to create a training capability to understand how to use social media in crisis. We report lessons learned from this exercise that may benefit first responders and NGOs who use social media to manage relief efforts during the disaster.},
+author = {Abbasi, Ma and Kumar, Shamanth},
+journal = {Social Computing, \ldots},
+pages = {282--289},
+title = {{Lessons learned in using social media for disaster relief-ASU crisis response game}},
+url = {http://link.springer.com/chapter/10.1007/978-3-642-29047-3\_34},
+year = {2012}
+}
+@book{Montola2009,
+abstract = {Quickly emerging from the fast-paced growth of mobile communications and wireless technologies, pervasive games take gaming away from the computer screen and back to the three-dimensional world. Now games can be designed to be played in public spaces like shopping malls, conferences, museums and other non-traditional game venues. Game designers need to understand how to use the world as a gamespace-and both the challenges and advantages of doing so. This book shows how to change the face of play-who plays, when and where they play and what that play means to all involved. The authors explore aspects of pervasive games that concern game designers: what makes these games compelling, what makes them possible today and how they are made. For game researchers, it provides a solid theoretical, philosophical and aesthetic understanding of the genre. Pervasive Games covers everything from theory and design to history and marketing. designers, so that they can learn how to engage players' real-time experiences beyond the mobile phone or computer screen. -Thirteen case studies with illustrative and inspiring examples make the entire pervasive games design space tangible. -Provides practical design tips, potential pitfalls, design problems from real games, and inspiration from some of the most interesting pervasive game designers in the world, including Matt Adams, Frank Lantz, and others.},
+author = {Montola, Markus and Stenros, Jaakko and Waern, Annika},
+booktitle = {Architecture},
+issn = {15443574},
+pages = {312},
+pmid = {15905028},
+title = {{Pervasive Games: Theory and Design}},
+url = {http://books.google.com/books?id=Yk4CCx6UyIIC\&pgis=1},
+year = {2009}
+}
+
