system evolution secion in contribution

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -285,3 +285,5 @@
 %\usepackage{lmodern} % <-- no osf support :-(
 %\usepackage[urw-garamond]{mathdesign} <-- no osf support :-(
 % ****************************************************************************************************
+
+\usepackage{float}
