--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -52,6 +52,9 @@
 \newcommand{\myLocation}{Nottingham\xspace}
 \newcommand{\myTime}{August 2012\xspace}
 \newcommand{\myVersion}{version 0.1\xspace}
+\newcommand\Mybox[1]{% for presenting episodes
+  \setlength\fboxsep{0pt}\fcolorbox{white}{white}{#1}
+}
 
 % ********************************************************************
 % Setup, finetuning, and useful commands
