--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -10,6 +10,7 @@
 % http://postcards.miede.de
 % ****************************************************************************************************
 
+
 % ****************************************************************************************************
 % 1. Configure classicthesis for your needs here, e.g., remove "drafting" below 
 % in order to deactivate the time-stamp on the pages
@@ -92,6 +93,9 @@
 % ******************************************************************** 
 % General useful packages
 % ******************************************************************** 
+
+
+
 \PassOptionsToPackage{T1}{fontenc} % T2A for cyrillics
 	\usepackage{fontenc}    
 	 
@@ -101,6 +105,8 @@
 \usepackage{mparhack} % get marginpar right
 \usepackage{fixltx2e} % fixes some LaTeX stuff 
 \usepackage{bibentry}
+
+
 \nobibliography*
 \PassOptionsToPackage{printonlyused,smaller}{acronym}
 	\usepackage{acronym} % nice macros for handling all acronyms in the thesis
@@ -290,3 +296,4 @@
 % ****************************************************************************************************
 
 \usepackage{float}
+\usepackage{graphicx}
