--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -40,8 +40,8 @@
 % ****************************************************************************************************
 % 2. Personal data and user ad-hoc commands
 % ****************************************************************************************************
-\newcommand{\myTitle}{Investigating Interactional Issues of Agent Planning Support\xspace}
-\newcommand{\mySubtitle}{In Disaster Response domain \xspace}
+\newcommand{\myTitle}{Investigating Interactional Issues of Agent Planning Support for Disaster Response \xspace}
+\newcommand{\mySubtitle}{With a Mixed Reality Game Probe \xspace}
 \newcommand{\myDegree}{Doctoral\xspace}
 \newcommand{\myName}{Wenchao Jiang\xspace}
 \newcommand{\myProf}{Put name here\xspace}
