--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -84,11 +84,16 @@
 %\PassOptionsToPackage{spanish,es-lcroman}{babel}
  \usepackage{babel}					
 
-\PassOptionsToPackage{square,numbers}{natbib}
- \usepackage{natbib}				
+
+\PassOptionsToPackage{square}{natbib}
+ \usepackage{natbib}		
+ 		
 
 \PassOptionsToPackage{fleqn}{amsmath}		% math environments and more by the AMS 
  \usepackage{amsmath}
+ 
+
+\bibliographystyle{apalike}
 
 % ******************************************************************** 
 % General useful packages
